--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mitarbeiterprofil – Sicherheitsgruppe SAFE – Jonas Krystofiak</title>
-  <link rel="icon" type="image/png" href="ChatGPT Image 14. Juni 2025, 18_21_11.png">
+  <link rel="icon" type="image/png" href="Dein Abschnittstext(4).png">
   <link rel="stylesheet" href="style.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
