--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mitarbeiterprofil – Sicherheitsgruppe SAFE – Jonas Krystofiak</title>
+  <title>Profil – Teamleiter Klasse 8/1 – Julian Kaiser</title>
   <link rel="icon" type="image/png" href="Dein Abschnittstext(4).png">
   <link rel="stylesheet" href="style.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -11,23 +11,23 @@
 <body>
 
   <section class="hero2 fade-in">
-      <h1>Jonas Krystofiak</h1>
-      <p>Mitarbeiterprofil – Sicherheits- und Aufsichtsgruppe SAFE</p>
+      <h1>Julian Kaiser</h1>
+      <p>Personen- und Kontaktprofil – Teamleitung Klasse 8/1</p>
   </section>
 
   <main class="fade-in">
 
     <h2>
-      <u>Mitarbeiterprofil und Kontaktinformationen – Jonas Krystofiak</u>
+      <u>Mitarbeiterprofil und Kontaktinformationen – Julian Kaiser</u>
     </h2>
 
     <section>
       <h3>Grundlegende personenbezogene Daten</h3>
       <p>
-        <strong>Jonas Krystofiak</strong><br>
+        <strong>Julian Kaiser</strong><br>
         Klasse 8/1 – Martin-Luther-Gymnasium Eisleben<br><br>
-        Sicherheitspersonal am Verkaufsstand der Klasse 8/1<br>
-        Personalnummer: SAFE–20100118
+        Klassensprecher und oberster schülerseitiger Klassenvertreter<br>
+        Identifikationsnummer: KIN–20110220
       </p>
     </section>
 
@@ -54,7 +54,7 @@
     <section>
       <h3>Verantwortung & Verhalten</h3>
       <p>
-        Verantwortlich für einen sicheren und reibungslosen Ablauf des Schulfests.  
+        Verantwortlich für die Vertretung der Klasse.  
         Bei Regelverstößen besteht das Recht, angemessen einzuschreiten, um die Sicherheit aller Schüler zu gewährleisten.  
         Dabei wird stets respektvoll und fair gehandelt.
       </p>
