--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main class="fade-in">
 
     <h2>
-      <u>Mitarbeiterprofil und Kontaktinformationen – Julian Kaiser</u>
+      <u>Personenprofil und Kontaktinformationen – Julian Kaiser</u>
     </h2>
 
     <section>
