--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Profil – Teamleiter Klasse 8/1 – Julian Kaiser</title>
+  <title>Profil – Klassensprecher Klasse 8/1 – Julian Kaiser</title>
   <link rel="icon" type="image/png" href="Dein Abschnittstext(4).png">
   <link rel="stylesheet" href="style.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 
   <section class="hero2 fade-in">
       <h1>Julian Kaiser</h1>
-      <p>Personen- und Kontaktprofil – Teamleitung Klasse 8/1</p>
+      <p>Personen- und Kontaktprofil – Schülerseitige Klassenvertretung Klasse 8/1</p>
   </section>
 
   <main class="fade-in">
